@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Add /FSET CHANNEL_URL for services channel URL numeric. (caf)
+
 * Fix crash bug in $mircansi() scripting function. (caf)
 
 * Add half-op support to /topic and /untopic. (caf)
